[gd_scene load_steps=5 format=3 uid="uid://cg324w086wct8"]

[ext_resource type="Script" path="res://Scripts/World.gd" id="1_2yf7h"]
[ext_resource type="Texture2D" uid="uid://bfmcq8ryr53x3" path="res://icon.svg" id="2_823eo"]
[ext_resource type="Script" path="res://Scripts/Pause.gd" id="3_8v10g"]
[ext_resource type="Script" path="res://Scripts/HUD.gd" id="3_owexi"]

[node name="World" type="Node2D"]
script = ExtResource("1_2yf7h")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(186, 128)
texture = ExtResource("2_823eo")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("3_owexi")

[node name="PanelContainer" type="PanelContainer" parent="HUD"]
self_modulate = Color(1, 0.0705882, 0.768627, 0.470588)
offset_left = 25.0
offset_top = 22.0
offset_right = 102.0
offset_bottom = 62.0

[node name="LbFPS" type="Label" parent="HUD/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "HUD"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="HUD"]
autostart = true

[node name="Pause" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("3_8v10g")

[node name="Panel" type="Panel" parent="Pause"]
self_modulate = Color(0.258824, 0.258824, 0.258824, 0.627451)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Pause/Panel"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Pause/Panel/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/Panel/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LbPauseMenu" type="Label" parent="Pause/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="Pause/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BtnReturnGame" type="Button" parent="Pause/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Return Game"

[node name="BtnOptions" type="Button" parent="Pause/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="BtnBackMenu" type="Button" parent="Pause/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back Menu"

[node name="Spacer2" type="Control" parent="Pause/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BtnQuitGame" type="Button" parent="Pause/Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit Game"

[connection signal="timeout" from="HUD/Timer" to="HUD" method="_on_timer_timeout"]
[connection signal="pressed" from="Pause/Panel/PanelContainer/MarginContainer/VBoxContainer/BtnReturnGame" to="." method="_on_btn_return_game_pressed"]
[connection signal="pressed" from="Pause/Panel/PanelContainer/MarginContainer/VBoxContainer/BtnOptions" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="Pause/Panel/PanelContainer/MarginContainer/VBoxContainer/BtnBackMenu" to="." method="_on_btn_back_menu_pressed"]
[connection signal="pressed" from="Pause/Panel/PanelContainer/MarginContainer/VBoxContainer/BtnQuitGame" to="." method="_on_btn_quit_game_pressed"]
